<resources>
    <string name="app_name">Master SQL</string>
    <string name="login">Login</string>
    <string name="policy">By signing in you are agreeing \nour Term and privacy policy</string>
    <string name="_login">Login</string>
    <string name="_register">Register</string>
    <string name="login_register">Login/Register</string>
    <string name="email_address" translatable="false">Email Address</string>
    <string name="password" translatable="false">Password</string>
    <string name="_email_address" translatable="false">"  Email address"</string>
    <string name="_password">Password</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="remember_password">Remember password</string>
    <string name="forget_password" translatable="false">Forget password</string>

    //Navigation menu
    <string name="nav_home" translatable="false">Home</string>
    <string name="nav_favorite" translatable="false">Favorite</string>
    <string name="nav_history" translatable="false">History</string>
    <string name="nav_account" translatable="false">Account</string>
    <string name="nav_profile">My profile</string>
    <string name="nav_sign_out">Sign out</string>

    <string name="nav_drawer_open" translatable="false">Open navigation</string>
    <string name="nav_drawer_close">Close navigation</string>


    //FORGOT PASSWORD VIEW
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_text">"We will send you an E-mail to reset your password."</string>
    <string name="forgot_submit">"SUBMIT"</string>
    <string name="forgot_login">"LOGIN"</string>

    //RESET PASSWORD VIEW
    <string name="reset_passwordText">"RESET YOUR PASSWORD BELOW"</string>
    <string name="reset_confirmPasswordTag">"Confirm Password"</string>
    <string name="reset_passwordButton">"RESET PASSWORD"</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="profile_picture">Profile Picture</string>
    <string name="profile_overview">Profile Overview</string>
    <string name="edit">edit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_image">User Image</string>
    <string name="user_name">User name:</string>
    <string name="age">Age:</string>
    <string name="country">Country:</string>
    <string name="all_users">All users</string>

    <string-array name="languages_array">
        <item>English</item>
        <item>French</item>
    </string-array>

    // EXERCISES STRINGS

    //BASIC TERMS QUESTIONS
    <string name="BT_Question1">What does SQL stand for?</string>
    <string name="secure_quality_lab">Secure Quality Lab</string>
    <string name="structured_query_language">Structured Query Language</string>
    <string name="simple_query_language">Simple Query Language</string>
    <string name="sequential_query_language">Sequential Query Language</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="what_is_a_primary_key">What is a primary key?</string>
    <string name="unique_identifier_for_each_row">Unique identifier for each row</string>
    <string name="a_data_type">A data type</string>
    <string name="a_table_name">A table name</string>
    <string name="selected_rows">Selected Rows</string>
    <string name="include">Include</string>
    <string name="everything">Everything</string>
    <string name="what_is_a_foreign_key">What is a foreign key?</string>
    <string name="constraint_that_ensures_column_uniqueness">Constraint that ensures column uniqueness</string>
    <string name="an_automatically_generated_key">an automatically generated key</string>
    <string name="a_key_that_stores_duplicate_values">A key that stores duplicate values</string>
    <string name="a_link_between_tablea">A link between tables</string>
    <string name="how_many_primary_keys_can_a_table_have">How many primary keys can a table have?</string>

    //TOOLS OF SQL QUESTIONS
    <string name="which_sql_tool_would_you_use_for_a_large_scale_application">Which SQL tool would you use for a large-scale application?</string>
    <string name="microsoft_sql">Microsoft SQL</string>
    <string name="oracle">Oracle</string>
    <string name="sqlite">SQLITE</string>
    <string name="mysql">MySQL</string>
    <string name="which_sql_tool_would_you_use_for_web_applications">Which SQL tool would you use for web applications?</string>
    <string name="which_sql_tool_would_you_use_for_online_transactions">Which SQL tool would you use for online transactions?</string>
    <string name="which_sql_tool_would_you_use_for_mobile_applications" translatable="false">Which SQL tool would you use for mobile applications?</string>
    <string name="done">Done</string>
    <string name="user_achievement" translatable="false">User Achievement</string>
    <string name="progress_tracking" translatable="false">Progress Tracking</string>
    <string name="quiz_management" translatable="false">Quiz Management</string>
    <string name="course_management" translatable="false">Course Management</string>
    <string name="user_management" translatable="false">User Management</string>
    <string name="admin_dashboard" translatable="false">Admin dashboard</string>
    <string name="quit" translatable="false">Quit</string>
    <string name="real_scenario">Real Scenario</string>
    <string name="scenario_retail_sales_and_inventory_management">Retail Sales and Inventory Management</string>
    <string name="in_a_retail_business_sql_is_commonly_used_to_manage_sales_data_and_inventory_assume_you_are_working_for_a_company_that_owns_multiple_retail_stores_and_an_online_platform_your_task_is_to_analyze_and_extract_useful_information_from_the_database_to_support_business_decisions_database_tables_products_table_columns_productid_productname_category_price_stockquantity_sales_table_columns_saleid_productid_saledate_quantity_totalamount_customers_table_columns_customerid_firstname_lastname_email_phone">In a retail business, SQL is commonly used to manage sales data and inventory. Assume you are working for a company that owns multiple retail stores and an online platform. Your task is to analyze and extract useful information from the database to support business decisions. Database Tables: Products Table: Columns: ProductID, ProductName, Category, Price, StockQuantity Sales Table: Columns: SaleID, ProductID, SaleDate, Quantity, TotalAmount Customers Table: Columns: CustomerID, FirstName, LastName, Email, Phone</string>
    <string name="show_answers">Show Answers</string>
    <string name="dash_board">Dash board</string>
    <string name="admin">Admin</string>

    <style name="Title">
        <item name="android:textSize">30dp</item>
        <item name="android:textColor">#E91E63</item>
    </style>
</resources>