<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_favorite"
            android:title="@string/dash_board" />
        <item
            android:id="@+id/nav_admin"
            android:icon="@android:drawable/star_big_on"
            android:title="@string/admin" />
    </group>

    <item android:title="@string/nav_account" >
        <menu>
            <item
                android:id="@+id/nav_my_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/nav_profile" />
            <item
                android:id="@+id/nav_signout"
                android:icon="@drawable/ic_change_password"
                android:title="@string/nav_sign_out" />
            <item
                android:id="@+id/nav_quit"
                android:icon="@drawable/ic_exit"
                android:title="@string/quit" />

        </menu>

    </item>
    </menu>