<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        android:textColorHint="@android:color/holo_blue_dark"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edEmailPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_email_address"
            android:textSize="20sp"
            android:inputType="textEmailAddress"
            android:drawableTint="#434141"
            android:textColorHint="@android:color/holo_blue_dark"
            android:drawableStart="@android:drawable/sym_action_email"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColorHint="@android:color/holo_blue_dark"
        app:layout_constraintTop_toBottomOf="@id/tilEmailAddress"
        app:passwordToggleDrawable="@drawable/show_password_selector"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@android:drawable/ic_lock_idle_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_password"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:textColorHint="@android:color/holo_blue_dark"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/cbRememberPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:text="@string/remember_password"
        android:textSize="15sp"
        />

    <TextView
        android:id="@+id/tvForgetPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/cbRememberPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:layout_marginEnd="20dp"
        android:textColor="@android:color/holo_blue_dark"
        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_login"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:backgroundTint="@android:color/holo_blue_dark"
        app:layout_constraintTop_toBottomOf="@id/cbRememberPass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="20dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>