<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/logo"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="horizontal">




        <TextView
            android:id="@+id/txtVForgotQuestion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text= "@string/forgot_password"
            android:layout_marginStart="60dp"
            android:textColor="#D12121"
            android:textSize="20sp"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal">



        <TextView
            android:id="@+id/txtVForgotText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/forgot_text"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtVEmailTag"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textSize="17sp"
            android:layout_marginStart="60dp"
            android:layout_weight="0.06"
            android:text="@string/email_address" />

        <EditText
            android:id="@+id/editTxtEmail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_weight="0.1"
            android:ems="10"
            android:inputType="textEmailAddress"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnSubmitEmail"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/forgot_submit"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBackToLogin"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/forgot_login"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            />
    </LinearLayout>

</LinearLayout>