<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPassword"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/logo"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtVResetTag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset_passwordText"
            android:textSize="20sp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:gravity="center"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtVPasswordTag"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:text="@string/password"
            android:textSize="17sp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:gravity="center"
            />

        <EditText
            android:id="@+id/edTxtResetPassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtVConfirmPasswordTag"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:text="@string/reset_confirmPasswordTag"
            android:textSize="17sp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:id="@+id/edTxtConfirmResetPassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <Button
            android:id="@+id/btnResetPassword"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/reset_passwordButton"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <Button
            android:id="@+id/btnBackToLogin"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/forgot_login"
            android:layout_marginRight="90dp"
            android:layout_marginLeft="90dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            />
    </LinearLayout>
</LinearLayout>